--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.7.7
+altgraph==0.17.2
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.2
@@ -7,6 +8,7 @@ Flask==2.1.1
 Flask-Login==0.6.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
+future==0.18.2
 greenlet==1.1.2
 idna==3.3
 importlib-metadata==4.11.3
@@ -14,6 +16,10 @@ itsdangerous==2.1.2
 Jinja2==3.1.1
 Mako==1.2.0
 MarkupSafe==2.1.1
+pefile==2021.9.3
+pyinstaller==5.0
+pyinstaller-hooks-contrib==2022.4
+pywin32-ctypes==0.2.0
 requests==2.27.1
 SQLAlchemy==1.4.35
 urllib3==1.26.9
