--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,242 @@
+aiogram==2.15
+aiohttp==3.8.0
+aiosignal==1.2.0
 alembic==1.7.7
+altgraph==0.17
+anyio==2.2.0
+appdirs==1.4.4
+APScheduler==3.6.3
+arcgis==1.8.4
+argon2-cffi==20.1.0
+asgiref==3.4.1
+asttokens==2.0.5
+async-generator==1.10
+async-timeout==4.0.0
+asyncio==3.4.3
+asyncpg==0.24.0
+attrs==20.3.0
+autobahn==21.11.1
+Babel==2.9.0
+backcall==0.2.0
+beautifulsoup4==4.9.3
+bleach==3.3.0
+blinker==1.4
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+charset-normalizer==2.0.7
+cheap-repr==0.4.5
+cheroot==8.5.2
+CherryPy==18.6.1
 click==8.1.2
+cloudipsp==1.0.3
 colorama==0.4.4
+cryptography==3.4.6
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
+Deprecated==1.2.13
+distlib==0.3.2
+distro==1.6.0
+Django==3.2.9
+docopt==0.6.2
+docutils==0.17.1
+emoji==1.2.0
+entrypoints==0.3
+executing==0.6.0
+filelock==3.0.12
 Flask==2.1.1
 Flask-Login==0.6.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
+fonttools==4.28.2
+frozenlist==1.2.0
+future==0.18.2
 greenlet==1.1.2
+gTTS==2.2.3
+h11==0.12.0
+h2==4.0.0
+hpack==4.0.0
+html2text==2020.1.16
+hurry==1.1
+hyperframe==6.0.0
+hyperlink==21.0.0
+idna==2.10
+image==1.5.33
 importlib-metadata==4.11.3
+imutils==0.5.4
+ipykernel==5.5.0
+ipython==7.21.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
 itsdangerous==2.1.2
+jaraco.classes==3.2.1
+jaraco.collections==3.4.0
+jaraco.functools==3.4.0
+jaraco.text==3.6.0
+jedi==0.18.0
 Jinja2==3.1.1
+joblib==1.0.1
+Js2Py==0.71
+json5==0.9.5
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.11
+jupyter-console==6.4.0
+jupyter-core==4.7.1
+jupyter-packaging==0.7.12
+jupyter-server==1.4.1
+jupyter-server-proxy==3.2.0
+jupyterlab==3.0.9
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.3.0
+jupyterlab-widgets==1.0.0
+kaitaistruct==0.9
+keyring==22.3.0
+Kivy==2.0.0
+kivy-deps.angle==0.3.0
+kivy-deps.glew==0.3.0
+kivy-deps.sdl2==0.3.1
+Kivy-Garden==0.1.4
+kiwisolver==1.3.1
+lerc==0.1.0
 Mako==1.2.0
 MarkupSafe==2.1.1
+matplotlib==3.5.0
+mistune==0.8.4
+more-itertools==8.10.0
+MouseInfo==0.1.3
+multidict==5.2.0
+nbclassic==0.2.6
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.5.1
+nltk==3.5
+notebook==6.2.0
+ntlm-auth==1.5.0
+numpy==1.20.1
+oauthlib==3.1.0
+opencv-python==4.5.5.62
+outcome==1.1.0
+packaging==20.9
+Panda3D==1.10.11
+pandas==1.2.2
+pandocfilters==1.4.3
+parso==0.8.1
+pefile==2021.5.24
+phonenumbers==8.12.46
+pickleshare==0.7.5
+Pillow==8.4.0
+pipwin==0.5.1
+playsound==1.2.2
+portend==3.0.0
+prometheus-client==0.9.0
+prompt-toolkit==3.0.16
+psycopg2==2.8.6
+psycopg2-binary==2.9.1
+pyaes==1.6.1
+pyasn1==0.4.8
+PyAudio @ file:///C:/Users/Tim/pipwin/PyAudio-0.2.11-cp39-cp39-win_amd64.whl
+PyAutoGUI==0.9.52
+pycparser==2.20
+pydivert==2.1.0
+pygame==2.0.1
+PyGetWindow==0.0.9
+Pygments==2.8.0
+pyinstaller==4.3
+pyinstaller-hooks-contrib==2021.2
+pyjsparser==2.7.1
+PyMsgBox==1.0.9
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+pyperclip==1.8.2
+pypiwin32==223
+PyPrind==2.11.3
+PyQt5==5.12.3
+pyqt5-plugins==5.15.2.2.1.0
+PyQt5-sip==12.9.0
+PyQt5-stubs==5.15.2.0
+pyqt5-tools==5.15.2.3.0.2
+PyRect==0.1.4
+pyrsistent==0.17.3
+PyScreeze==0.1.26
+pyshp==2.1.3
+pySmartDL==1.3.4
+PySocks==1.7.1
+pyTelegramBotAPI==3.7.6
+python-certifi-win32==1.6
+python-dateutil==2.8.1
+python-dotenv==0.17.1
+python-telegram-bot==13.4.1
+python-vlc==3.0.12118
+PyTweening==1.0.3
+pytz==2021.1
+pyvirtualcam==0.9.0
+pywhatkit==4.5
+pywin32==300
+pywin32-ctypes==0.2.0
+pywinpty==0.5.7
+pyzmq==22.0.3
+qt5-applications==5.15.2.2.1
+qt5-tools==5.15.2.1.0.1
+qtconsole==5.2.1
+QtPy==1.11.2
+regex==2020.11.13
+requests==2.25.1
+requests-kerberos==0.12.0
+requests-negotiate-sspi==0.5.2
+requests-ntlm==1.1.0
+requests-oauthlib==1.3.0
+requests-toolbelt==0.9.1
+rsa==4.7.2
+schedule==1.1.0
+scikit-learn==0.24.2
+scipy==1.7.0
+selenium==4.0.0b4
+selenium-wire==4.2.0
+Send2Trash==1.5.0
+setuptools-scm==5.0.1
+simpervisor==0.4
+six==1.15.0
+sklearn==0.0
+sniffio==1.2.0
+snoop==0.3.0
+sortedcontainers==2.4.0
+soupsieve==2.2
+SpeechRecognition==3.8.1
 SQLAlchemy==1.4.35
+sqlparse==0.4.2
+Telethon==1.23.0
+tempora==4.1.2
+terminado==0.9.2
+testpath==0.4.4
+threadpoolctl==2.1.0
+torch==1.10.0
+tornado==6.1
+tqdm==4.58.0
+traitlets==5.0.5
+trio==0.19.0
+trio-websocket==0.9.2
+txaio==21.2.1
+typing-extensions==3.10.0.2
+tzlocal==2.1
+ujson==4.0.2
+undetected-chromedriver==3.0.3
+urllib3==1.26.3
+virtualenv==20.4.7
+vpython==7.6.2
+wcwidth==0.2.5
+webencodings==0.5.1
+websockets==10.0
 Werkzeug==2.1.1
+widgetsnbextension==3.5.1
+wikipedia==1.4.0
+winkerberos==0.7.0
+wrapt==1.12.1
+wsproto==1.0.0
+xlrd==2.0.1
+yarl==1.7.2
+yookassa==2.1.4
+zc.lockfile==2.0
 zipp==3.8.0
